PaC/CEL/gatekeeper-{{Rego,CEL}}/CEL/2-1.CEL-ConstraintTemplate-NoHostPath.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: celconstrainttemplatenohostpath 
spec:
  crd:
    spec:
      names:
        kind: CELConstraintTemplateNoHostPath 
  targets:
    - target: admission.k8s.gatekeeper.sh
      code:
        - engine: K8sNativeValidation
          source:
            validations:
            - expression: "!has(object.spec.template.spec.volumes[_].hostPath || object.spec.hostNetwork != true"
              message: "HostPath is not allowed for template of Pod"
